[package]
name = "obliqoro"
version = "0.1.4"
description = "Oblique strategies meets pomodoro"
authors = ["Jack Wills <email@mrjackwills.com>"]
license = "MIT"
homepage = "https://www.github.com/mrjackwills/obliqoro"
repository = "https://www.github.com/mrjackwills/obliqoro"
edition = "2021"
rust-version = "1.65"
keywords = ["pomodoro", "timer", "tauri", "gui", "oblique"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
auto-launch = "0.4"
dunce = "1.0"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", default-features = false, features = [ "runtime-tokio-rustls", "sqlite", "macros", "time"] }
tauri = { version = "1.3", features = [ "shell-open", "native-tls-vendored", "system-tray"] }
thiserror = "1.0"
time = { version="0.3", features= ["serde", "parsing", "local-offset"] }
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = {version="0.3", features = ["json"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false

