[package]
name = "obliqoro"
version = "0.1.13"
description = "Oblique strategies meets pomodoro"
authors = ["Jack Wills <email@mrjackwills.com>"]
license = "MIT"
homepage = "https://www.github.com/mrjackwills/obliqoro"
repository = "https://www.github.com/mrjackwills/obliqoro"
edition = "2021"
rust-version = "1.65"
keywords = ["pomodoro", "timer", "tauri", "gui", "oblique"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
expect_used = "warn"
todo = "warn"
unused_async = "warn"
unwrap_used = "warn"
module_name_repetitions = "allow"
doc_markdown = "allow"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
auto-launch = "0.5"
dunce = "1.0"
open = "5.1"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", default-features = false, features = [ "runtime-tokio", "sqlite", "macros", "time"] }
tauri = { version = "1.6", features = [ "shell-open", "native-tls-vendored", "system-tray"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
thiserror = "1.0"
time = { version="0.3", features= ["serde", "parsing", "local-offset"] }
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = {version="0.3", features = ["json"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false

