[package]
name = "obliqoro"
version = "0.3.1"
description = "Oblique strategies meets pomodoro"
authors = ["Jack Wills <email@mrjackwills.com>"]
license = "MIT"
homepage = "https://www.github.com/mrjackwills/obliqoro"
repository = "https://www.github.com/mrjackwills/obliqoro"
edition = "2024"
rust-version = "1.89"
keywords = ["pomodoro", "timer", "tauri", "gui", "oblique"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
expect_used = "warn"
todo = "warn"
unused_async = "warn"
unwrap_used = "warn"
module_name_repetitions = "allow"
doc_markdown = "allow"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
auto-launch = "0.5"
dunce = "1.0"
open = "5.3.2"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = [
        "brotli",
        "gzip",
        "json",
        "rustls-tls-native-roots",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = [ "runtime-tokio", "sqlite", "macros", "time"] }
sysinfo = { version = "0.37", default-features = false, features = ["system"] }
tauri = { version = "2.8", features = [ "native-tls-vendored", "image-png", "tray-icon"] }
tauri-plugin-shell = "2.3"
tauri-plugin-single-instance = { version = "2.3" }
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version="0.3", features = ["json"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false

